--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -22,7 +22,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
                         </sourceDesc>
                         <notesStmt>
                                 <note>Note: not identified in Toh.</note>
-                                <note type="lastUpdated" date-time="2023-07-24T13:57:33.692Z" user="admin">24/07/2023 13:57:33</note>
+                                <note type="lastUpdated" date-time="2023-07-27T15:15:20.539Z" user="admin">27/07/2023 15:15:20</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto
@@ -119,6 +119,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.0.0</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-07-24T13:57:30.871Z" user="konchog">Two fixes in the intro and three in the notes.</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-07-27T15:15:17.726Z" user="martina-cotter">Added pending links.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -269,12 +270,13 @@
                                         <p tid="12">The present work lacks a Sanskrit title at the
                                                 beginning and a translator’s colophon at the end. It is possible that like <title xml:lang="en">A Mantra for Incanting
                                                   Medicines, Extracted From “Destroyer of the Great
-                                                  Trichiliocosm”</title> (Toh 1059), <ref inst="untoggle comment for following note" rend="pending" target="http://read.84000.co/translation/toh1059.html"/>
-                                                <!--<note place="end" xml:id="UT22084-087-011-60">
+                                                  Trichiliocosm”</title> (Toh 1059),<note place="end" xml:id="UT22084-087-011-62">
                                                         Dalton, Catherine. trans., 
-                                                        <title xml:lang="en"><ref target="http://read.84000.co/translation/toh1059.html">
-                                                                A Mantra for Incanting Medicines, Extracted from “Destroyer of the Great Trichiliocosm”</ref></title>, Toh 1059 (84000:
-                                                        Translating the Words of the Buddha, 2023).</note>-->
+                                                        <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh1059.html">
+                                                                A Mantra for Incanting Medicines, Extracted from “Destroyer of the Great Trichiliocosm”</ref>
+                            </title>, Toh 1059 (84000:
+                                                        Translating the Words of the Buddha, 2023).</note>
                                                 the short work that immediately precedes
                                                 it in the Compendium of Dhāraṇīs section, it may
                                                 have been extracted from its source text and given
@@ -422,6 +424,10 @@
                                                 stod thang ldan dkar gyi chos kyi ’gyur ro cog gi
                                                 dkar chag</foreign>). Toh 4364, Degé Tengyur vol. 206
                                                 (sna tshogs, jo), folios 294.b–310.a.</bibl>
+                                        <bibl xml:id="UT22084-087-011-63">Dalton, Catherine. trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh1059.html">A Mantra for Incanting Medicines, Extracted from “Destroyer of the Great Trichiliocosm”</ref>
+                        </title>, Toh 1059. 84000:
+                                                Translating the Words of the Buddha.</bibl>
                                         <bibl xml:id="UT22084-087-011-35">Dalton, Jacob P. “How
                                                 Dhāraṇīs WERE Proto-Tantric: Liturgies, Ritual
                                                 Manuals, and the Origins of the Tantras.” In <title xml:lang="en">Tantric Traditions in Transmission
