--- a/translations/kangyur/translations/090-034_toh590,985-sitatapatra_born_from_the_usnisa_of_all_tathagatas.xml
+++ b/translations/kangyur/translations/090-034_toh590,985-sitatapatra_born_from_the_usnisa_of_all_tathagatas.xml
@@ -42,7 +42,7 @@
         <editor role="finalReviewer" ref="eft:person-411">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -85,7 +85,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-26T10:22:28.911Z" user="admin">26/06/2023 10:22:28</note>
+        <note type="lastUpdated" date-time="2023-07-27T18:53:20.46Z" user="admin">27/07/2023 18:53:20</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:46:40.495Z" user="line-tofte">3</note>
@@ -126,6 +126,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-19T07:37:37.169Z" user="sameer">First published version.</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-06-19T11:38:53.263Z" user="john">Various edits to intro and glossary.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2023-06-26T10:22:26.057Z" user="andre">Glossary matching with CG revised - activated in CG</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2023-07-27T18:53:17.63Z" user="martina-cotter">updated  glossary entry.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -3289,15 +3290,14 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-090-034-382" type="person" mode="match">
-              <term>Māra</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">bdud</term>
-              <term xml:lang="bo" type="sourceAttested">བདུད།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">māra</term>
-              <term type="definition">The demon who assailed Śākyamuni prior to his
-                awakening.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-034-382" type="person" mode="match">
+                            <term>Māra</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bdud</term>
+                            <term xml:lang="bo" type="sourceAttested">བདུད།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">māra</term>
+                            <term type="definition">The demon who assailed Śākyamuni prior to his awakening.</term>
+                        </gloss>
+                    </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-034-383">
               <term>Yama</term>
@@ -3394,8 +3394,8 @@
                   (2) as ablution, <title xml:lang="Sa-Ltn">Vajravidāraṇā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">rdo rje rnam ’joms pa</title>, Toh 750, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh750.html">Vajra
                     Conqueror</ref>
-                                </title>); (3) as view, <title xml:lang="Sa-Ltn">Prajñāpāramitā­ṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying
-                po</title>, Toh 21 and 531, <title xml:lang="en">
+                                </title>); (3) as view, <title xml:lang="Sa-Ltn">Prajñā­pāramitāhṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying
+                      po</title>, <ref target="https://read.84000.co/translation/toh21.html">Toh 21</ref> and <ref target="https://read.84000.co/translation/toh531.html">Toh 531</ref>, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh21.html">The Heart of the
                     Perfection of Wisdom, the Blessed Mother</ref>
                                 </title>); (4) as cultivation, <title xml:lang="Sa-Ltn">Atyayajñāna</title> (<title xml:lang="Bo-Ltn">’da’ ka ye
@@ -3403,8 +3403,7 @@
                                     <ref target="https://read.84000.co/translation/toh122.html">The Sūtra on Wisdom at
                     the Hour of Death</ref>
                                 </title>); (5) as purification of karmic obscuration, <title xml:lang="Bo-Ltn">bya ba ltung
-                  bshags</title> from the <title xml:lang="Sa-Ltn">Vinayaviniścayopāli­paripṛcchā</title> (Toh 68, <title xml:lang="en">Ascertaining
-                  the Vinaya: Upāli’s Questions</title>, <ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-94">1.43</ref>–<ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-111">1.52</ref>); (6) for longevity, <title xml:lang="Sa-Ltn">Aparimitāyurjñāna</title> (<title xml:lang="Bo-Ltn">tshe dang ye shes dpag tu med pa’i mdo</title>, most likely Toh 675, <title xml:lang="en">
+                  bshags</title> from the <title xml:lang="Sa-Ltn">Vinayaviniścayopāli­paripṛcchā</title> (Toh 68, <title xml:lang="en">Determining the Vinaya: Upāli’s Questions</title>, <ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-94">1.43</ref>–<ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-111">1.52</ref>); (6) for longevity, <title xml:lang="Sa-Ltn">Aparimitāyurjñāna</title> (<title xml:lang="Bo-Ltn">tshe dang ye shes dpag tu med pa’i mdo</title>, most likely Toh 675, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh675.html">The
                     Aparimitāyurjñāna Sūtra [2]</ref>
                                 </title>); (7) for protection, <title xml:lang="Bo-Ltn">gos
