--- a/translations/kangyur/translations/090-037_toh593-the_invincible_sitatapatra_2.xml
+++ b/translations/kangyur/translations/090-037_toh593-the_invincible_sitatapatra_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" ref="eft:person-411">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -66,7 +66,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-26T20:07:12.523Z" user="admin">26/06/2023 20:07:12</note>
+        <note type="lastUpdated" date-time="2023-07-27T18:56:11.522Z" user="admin">27/07/2023 18:56:11</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">3</note>
@@ -108,6 +108,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2023-06-20T05:46:52.73Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-20T05:46:52.73Z" user="sameer">First published version.</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-06-26T20:07:09.655Z" user="andre">Glossary matching revised - activated in CG</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2023-07-27T18:56:08.609Z" user="martina-cotter">updated glossary entry.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2590,8 +2591,8 @@
               (2) as ablution, <title xml:lang="Sa-Ltn">Vajravidāraṇā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">rdo rje rnam ’joms pa</title>, Toh 750, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh750.html">Vajra
                 Conqueror</ref>
-                                </title>); (3) as view, <title xml:lang="Sa-Ltn">Prajñāpāramitā­ṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying
-                  po</title>, Toh 21 and 531, <title xml:lang="en">
+                                </title>); (3) as view, <title xml:lang="Sa-Ltn">Prajñā­pāramitāhṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying
+                  po</title>, <ref target="https://read.84000.co/translation/toh21.html">Toh 21</ref> and <ref target="https://read.84000.co/translation/toh531.html">Toh 531</ref>, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh21.html">The Heart of the
                     Perfection of Wisdom, the Blessed Mother</ref>
                                 </title>); (4) as cultivation, <title xml:lang="Sa-Ltn">Atyayajñāna</title> (<title xml:lang="Bo-Ltn">’da’ ka ye
@@ -2599,8 +2600,7 @@
                                     <ref target="https://read.84000.co/translation/toh122.html">The Sūtra on Wisdom at
                         the Hour of Death</ref>
                                 </title>); (5) as purification of karmic obscuration, <title xml:lang="Bo-Ltn">bya ba ltung
-                          bshags</title> from the <title xml:lang="Sa-Ltn">Vinayaviniścayopāli­paripṛcchā</title> (Toh 68, <title xml:lang="en">Ascertaining
-                            the Vinaya: Upāli’s Questions</title>, <ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-94">1.43</ref>–<ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-111">1.52</ref>); (6) for longevity, <title xml:lang="Sa-Ltn">Aparimitāyurjñāna</title> (<title xml:lang="Bo-Ltn">tshe dang ye shes dpag tu med pa’i mdo</title>, most likely Toh 675, <title xml:lang="en">
+                          bshags</title> from the <title xml:lang="Sa-Ltn">Vinayaviniścayopāli­paripṛcchā</title> (Toh 68, <title xml:lang="en">Determining the Vinaya: Upāli’s Questions</title>, <ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-94">1.43</ref>–<ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-111">1.52</ref>); (6) for longevity, <title xml:lang="Sa-Ltn">Aparimitāyurjñāna</title> (<title xml:lang="Bo-Ltn">tshe dang ye shes dpag tu med pa’i mdo</title>, most likely Toh 675, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh675.html">The
                               Aparimitāyurjñāna Sūtra [2]</ref>
                                 </title>); (7) for protection, <title xml:lang="Bo-Ltn">gos
