--- a/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
+++ b/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-180">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.26 <date>2021</date>
+                <edition>v 1.3.27 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-27T22:07:52.965Z" user="admin">27/07/2023 22:07:52</note>
+                <note type="lastUpdated" date-time="2023-07-27T22:09:21.76Z" user="admin">27/07/2023 22:09:21</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-05-29T11:54:09.215Z" user="james">2.c</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:56.467Z" user="mike">2.d</note>
@@ -116,6 +116,7 @@
                 <note type="updated" update="text-version" value="1.3.24" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.3.25" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.3.26" date-time="2023-07-27T22:07:50.1Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
+                <note type="updated" update="text-version" value="1.3.27" date-time="2023-07-27T22:09:18.9Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
