--- a/translations/kangyur/translations/059-008_toh165-question_of_ksemamkara.xml
+++ b/translations/kangyur/translations/059-008_toh165-question_of_ksemamkara.xml
@@ -33,7 +33,7 @@
     <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.12 <date>2021</date>
+                <edition>v 1.2.13 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T19:47:56.594Z" user="celso">20/01/2023 19:47:56</note>
+                <note type="lastUpdated" date-time="2023-07-27T22:27:52.225Z" user="admin">27/07/2023 22:27:52</note>
                 <note type="updated" update="text-version" value="v 1.00" date-time="2019-03-13T17:52:31.555Z" user="andre">v 1.00 2018</note>
                 <note type="updated" update="text-version" value="v 1.00" date-time="2019-03-13T18:46:37.719Z" user="andre">v 1.00 2018</note>
                 <note type="updated" update="text-version" value="v 1.00" date-time="2019-04-11T17:35:24.187Z" user="andre">v 1.00 2018</note>
@@ -94,7 +94,7 @@
     <note type="updated" update="text-version" value="1.2.6" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.2.7" date-time="2021-01-04T22:17:28.857Z" user="laura">Updated colophon to Bandé</note>
     <note type="updated" update="text-version" value="1.2.8" date-time="2021-02-12T19:15:21.71Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.2.9" date-time="2021-06-26T04:16:40.128Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.2.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.12" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.9" date-time="2021-06-26T04:16:40.128Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.2.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.12" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.2.13" date-time="2023-07-27T22:27:49.389Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -241,7 +241,7 @@
                         unsurpassed and perfect awakening and will obtain the perfect qualities you
                         have described.” </p>
                     <milestone unit="chunk" xml:id="UT22084-059-008-17"/>
-                    <p tid="24">When the Blissful One had said this, the Teacher also spoke these
+                    <p tid="24">When the Well-Gone One had said this, the Teacher also spoke these
                         words: </p>
                     <lg tid="25">
                         <l>“Although blamed, do not reciprocate.</l>
@@ -329,7 +329,7 @@
                     </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-059-008-31"/>
-                    <p tid="34">When the Blissful One had said this, the Teacher also spoke these
+                    <p tid="34">When the Well-Gone One had said this, the Teacher also spoke these
                         words: </p>
                     <lg tid="35">
                         <l>“Beings who yearn for the Dharma</l>
@@ -631,26 +631,21 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-059-008-72">
+                        <gloss xml:id="UT22084-059-008-72" type="term" mode="match">
                             <term>gandharva</term>
-                            <term xml:lang="Bo-Ltn">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">gandharva</term>
-                            <term type="definition">Lower class of divine being, under the control
-                                of the Guardian King of the East. Capable of flight, they are often
-                                described as “celestial musicians.”</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">Lower class of divine being, under the control of the Guardian King of the East. Capable of flight, they are often described as “celestial musicians.”</term>
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-059-008-73">
+                        <gloss xml:id="UT22084-059-008-73" type="term" mode="match">
                             <term>garuḍa</term>
-                            <term xml:lang="Bo-Ltn">nam mkha’ lding </term>
-                            <term xml:lang="bo">ནམ་མཁའ་ལྡིང་།</term>
-                            <term xml:lang="Sa-Ltn">garuḍa</term>
-                            <term type="definition">Lower class of divine being, described as an
-                                eagle-type bird with a gigantic wingspan. They are traditionally
-                                enemies of the nāgas. In the Vedas, they are thought to have brought
-                                nectar from the heavens to earth.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’ lding</term>
+                            <term xml:lang="bo" type="sourceAttested">ནམ་མཁའ་ལྡིང་།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">garuḍa</term>
+                            <term type="definition">Lower class of divine being, described as an eagle-type bird with a gigantic wingspan. They are traditionally enemies of the nāgas. In the Vedas, they are thought to have brought nectar from the heavens to earth.</term>
                         </gloss>
                     </item>
                     <item>
@@ -665,11 +660,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-059-008-75">
+                        <gloss xml:id="UT22084-059-008-75" type="term" mode="match">
                             <term>mahoraga</term>
-                            <term xml:lang="Bo-Ltn">lto ’phye chen po </term>
-                            <term xml:lang="bo">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
-                            <term xml:lang="Sa-Ltn">mahoraga</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lto ’phye chen po</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahoraga</term>
                             <term type="definition">A class of serpentine non-human beings.</term>
                         </gloss>
                     </item>
@@ -695,14 +690,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-059-008-78">
+                        <gloss xml:id="UT22084-059-008-78" type="term" mode="match">
                             <term>yakṣa</term>
-                            <term xml:lang="Bo-Ltn">gnod sbyin </term>
-                            <term xml:lang="bo">གནོད་སྦྱིན།</term>
-                            <term xml:lang="Sa-Ltn">yakṣa</term>
-                            <term type="definition">A class of semidivine beings said to dwell in
-                                the north, under the jurisdiction of the Great King Vaiśravaṇa,
-                                otherwise known as Kubera.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gnod sbyin</term>
+                            <term xml:lang="bo" type="sourceAttested">གནོད་སྦྱིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">yakṣa</term>
+                            <term type="definition">A class of semidivine beings said to dwell in the north, under the jurisdiction of the Great King Vaiśravaṇa, otherwise known as Kubera.</term>
                         </gloss>
                     </item>
                     <item>
@@ -736,14 +729,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-059-008-82">
+                        <gloss xml:id="UT22084-059-008-82" type="term" mode="match">
                             <term>demigod</term>
-                            <term xml:lang="Bo-Ltn">lha ma yin </term>
-                            <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
-                            <term xml:lang="Sa-Ltn">asura</term>
-                            <term type="definition">The traditional adversaries of the devas (gods)
-                                who are frequently portrayed in Brahmanical mythology as having a
-                                disruptive effect on cosmological and social harmony.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lha ma yin</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ་མ་ཡིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">asura</term>
+                            <!--<term type="definition">The traditional adversaries of the devas (gods) who are frequently portrayed in Brahmanical mythology as having a disruptive effect on cosmological and social harmony.</term>-->
                         </gloss>
                     </item>
                     <item>
@@ -778,13 +769,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-059-008-85">
+                        <gloss xml:id="UT22084-059-008-85" type="person" mode="match">
                             <term>Ānanda</term>
-                            <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                            <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                            <term xml:lang="Sa-Ltn">Ānanda</term>
-                            <term type="definition">Attendant of the Buddha and the one who is said
-                                to have memorized the sūtras.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">Attendant of the Buddha and the one who is said to have memorized the sūtras.</term>
                         </gloss>
                     </item>
                     <item>
@@ -797,13 +787,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-059-008-87">
+                        <gloss xml:id="UT22084-059-008-87" type="person" mode="match">
                             <term>Māra</term>
-                            <term xml:lang="Bo-Ltn">bdud </term>
-                            <term xml:lang="bo">བདུད།</term>
-                            <term xml:lang="Sa-Ltn">Māra</term>
-                            <term type="definition">Demon or demonic influence that creates
-                                obstacles for spiritual practice and awakening.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bdud</term>
+                            <term xml:lang="bo" type="sourceAttested">བདུད།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">māra</term>
+                            <term type="definition">Demon or demonic influence that creates obstacles for spiritual practice and awakening.</term>
                         </gloss>
                     </item>
                     <item>
@@ -846,11 +835,11 @@
                     <!-- places -->
 
                     <item>
-                        <gloss type="place" xml:id="UT22084-059-008-91">
+                        <gloss xml:id="UT22084-059-008-91" type="place" mode="match">
                             <term>Ganges</term>
-                            <term xml:lang="Bo-Ltn">gang gA </term>
-                            <term xml:lang="bo">གང་གཱ།</term>
-                            <term xml:lang="Sa-Ltn">Gaṅgā</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gang gA</term>
+                            <term xml:lang="bo" type="sourceAttested">གང་གཱ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gaṅgā</term>
                             <term type="definition">The sacred river of North India.</term>
                         </gloss>
                     </item>
