--- a/translations/kangyur/translations/061-002_toh182-the_sutra_on_the_perfection_of_generosity.xml
+++ b/translations/kangyur/translations/061-002_toh182-the_sutra_on_the_perfection_of_generosity.xml
@@ -28,7 +28,7 @@
                 <editor role="externalReviewer" ref="contributors.xml#person-283">Dan Hirshberg</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.18.19 <date>2021</date>
+                <edition>v 1.18.20 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,8 +66,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:33:17.594Z" user="celso">18/01/2023 15:33:17</note>
-            <note type="updated" update="text-version" value="v 1.06, 2018" date-time="2019-04-29T13:29:19.807Z" user="mike">v 1.06, 2018 2018-11-14</note>
+                <note type="lastUpdated" date-time="2023-07-27T22:34:36.305Z" user="admin">27/07/2023 22:34:36</note>
+              <note type="updated" update="text-version" value="v 1.06, 2018" date-time="2019-04-29T13:29:19.807Z" user="mike">v 1.06, 2018 2018-11-14</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-29T13:29:19.807Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="v 0.3" date-time="2019-05-31T08:48:26.556Z" user="john">v 0.3 2019</note>
                 <note type="updated" update="text-version" value="v 0.5" date-time="2019-06-01T07:42:46.284Z" user="john">v 0.5 2019</note>
@@ -77,6 +77,7 @@
                 <note type="updated" update="text-version" value="v 0.9" date-time="2019-06-14T11:50:53.763Z" user="john">v 0.9 2019</note>
                 <note type="updated" update="text-version" value="v 1.0" date-time="2019-07-01T09:54:09.579Z" user="john">v 1.0 2019</note>
                 <note type="updated" update="translation-status" value="1" date-time="2019-07-01T09:54:09.579Z" user="john">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2019-07-01T09:54:09.579Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="v 1.1" date-time="2019-07-02T07:04:42.989Z" user="john">v 1.1 2019</note>
                 <note type="updated" update="text-version" value="v 1.11" date-time="2019-07-02T18:25:00.223Z" user="john">v 1.11 2019</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-07-16T08:50:57.186Z" user="john">v 1.12 2019</note>
@@ -101,7 +102,7 @@
                 <note type="updated" update="text-version" value="1.18.13" date-time="2021-04-29T20:11:43.691Z" user="celso">minor correction to glossary entry</note>
                 <note type="updated" update="text-version" value="1.18.14" date-time="2021-05-01T02:57:04.659Z" user="celso">activated pending links to 1-6</note>
     <note type="updated" update="text-version" value="1.18.15" date-time="2021-06-26T04:13:52.04Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.18.16" date-time="2021-08-10T17:05:57.669Z" user="celso">activated pending links to Toh 183</note>    <note type="updated" update="text-version" value="1.18.17" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.18.18" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.18.19" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.18.16" date-time="2021-08-10T17:05:57.669Z" user="celso">activated pending links to Toh 183</note>    <note type="updated" update="text-version" value="1.18.17" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.18.18" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.18.19" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.18.20" date-time="2023-07-27T22:34:33.409Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -986,7 +987,7 @@
                     <lg tid="82">
                         <l>“May I sever the web of their negative views</l>
                         <l>With the sword of insight,</l>
-                        <l>And offer them perfect beds worthy of the blissful ones</l>
+                        <l>And offer them perfect beds worthy of the well-gone ones</l>
                         <l>And rested upon<note place="end" xml:id="UT22084-061-002-99">K<hi rend="subscript">Y</hi>, K, and S read: <foreign xml:lang="Bo-Ltn" type="quote">bstan</foreign>. J and N read: <foreign xml:lang="Bo-Ltn" type="quote">stan</foreign>.</note> in the abodes of Brahmā.
                                 <ref cRef="F.87.b" type="folio" xml:id="UT22084-061-002-345"/>
                         </l>
@@ -1609,7 +1610,7 @@
                     <lg tid="149">
                         <l>“Benefactor, this is excellent! You who are always like a father, this is
                             excellent!</l>
-                        <l>Benefactor, this is excellent! Blissful One, your 
+                        <l>Benefactor, this is excellent! Well-Gone One, your 
                             words<note place="end" xml:id="UT22084-061-002-169">Following K<hi rend="subscript">Y</hi>, K, N, C, and
                                 H: <foreign xml:lang="Bo-Ltn" type="quote">gsung</foreign>. D reads
                                     <foreign xml:lang="Bo-Ltn" type="quote">gsang</foreign>.</note>
@@ -1962,13 +1963,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-061-002-201">
+                        <gloss xml:id="UT22084-061-002-201" type="term" mode="match">
                             <term>piśāca</term>
-                            <term xml:lang="Bo-Ltn">sha za </term>
-                            <term xml:lang="bo">ཤ་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">piśāca</term>
-                            <term type="definition">A class of demons. Literally
-                                “flesh eaters.”</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">sha za</term>
+                            <term xml:lang="bo" type="sourceAttested">ཤ་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">piśāca</term>
+                            <term type="definition">A class of demons. Literally “flesh eaters.”</term>
                         </gloss>
                     </item>
                     <item>
@@ -1981,13 +1981,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-061-002-203">
+                        <gloss xml:id="UT22084-061-002-203" type="term" mode="match">
                             <term>bhūta</term>
-                            <term xml:lang="Bo-Ltn">’byung po </term>
-                            <term xml:lang="bo">འབྱུང་པོ།</term>
-                            <term xml:lang="Sa-Ltn">bhūta</term>
-                            <term type="definition">A general term for spirit, ghost, or
-                                demon.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
+                            <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term>
+                            <term type="definition">A general term for spirit, ghost, or demon.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2024,13 +2023,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-002-207">
+                        <gloss xml:id="UT22084-061-002-207" type="person" mode="match">
                             <term>Ānanda</term>
-                            <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                            <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                            <term xml:lang="Sa-Ltn">Ānanda</term>
-                            <term type="definition">The Buddha’s cousin and principal
-                                attendant.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">The Buddha’s cousin and principal attendant.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2419,13 +2417,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-002-248">
+                        <gloss xml:id="UT22084-061-002-248" type="person" mode="match">
                             <term>Mañjuśrīkumārabhūta</term>
-                            <term xml:lang="Bo-Ltn">’jam dpal gzhon nur gyur pa </term>
-                            <term xml:lang="bo">འཇམ་དཔལ་གཞོན་ནུར་གྱུར་པ།</term>
-                            <term xml:lang="Sa-Ltn">Mañjuśrī­kumāra­bhūta</term>
-                            <term type="definition">One of the eight main bodhisattvas, the heart
-                                sons of the Buddha.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’jam dpal gzhon nur gyur pa</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇམ་དཔལ་གཞོན་ནུར་གྱུར་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī­kumāra­bhūta</term>
+                            <term type="definition">One of the eight main bodhisattvas, the heart sons of the Buddha.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2796,11 +2793,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-002-291">
+                        <gloss xml:id="UT22084-061-002-291" type="person" mode="match">
                             <term>Vajrapāṇi</term>
-                            <term xml:lang="Bo-Ltn">lag na rdo rje </term>
-                            <term xml:lang="bo">ལག་ན་རྡོ་རྗེ།</term>
-                            <term xml:lang="Sa-Ltn">Vajrapāṇi</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lag na rdo rje</term>
+                            <term xml:lang="bo" type="sourceAttested">ལག་ན་རྡོ་རྗེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vajrapāṇi</term>
                             <term type="definition">A leader of the yakṣas.</term>
                         </gloss>
                     </item>
@@ -2853,13 +2850,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-002-297">
+                        <gloss xml:id="UT22084-061-002-297" type="person" mode="match">
                             <term>Yeshé Dé</term>
-                            <term xml:lang="Bo-Ltn">ye shes sde </term>
-                            <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-                            <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">A prolific Tibetan translator active during the
-                                late eighth and early ninth centuries.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
+                            <term type="definition">A prolific Tibetan translator active during the late eighth and early ninth centuries.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2894,13 +2890,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-061-002-302">
+                        <gloss xml:id="UT22084-061-002-302" type="place" mode="match">
                             <term>Mount Sumeru</term>
-                            <term xml:lang="Bo-Ltn">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                            <term xml:lang="Sa-Ltn">Sumeru</term>
-                            <term type="definition">Center of the universe according to Buddhist and
-                                Hindu cosmology.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sumeru</term>
+                            <term type="definition">Center of the universe according to Buddhist and Hindu cosmology.</term>
                         </gloss>
                     </item>
                     <item>
