--- a/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
+++ b/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.10 <date>2023</date>
+                <edition>v 1.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-19T12:52:27.756Z" user="admin">19/04/2023 12:52:27</note>
+                <note type="lastUpdated" date-time="2023-07-27T22:36:03.313Z" user="admin">27/07/2023 22:36:03</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-25T06:26:52.399Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-09T08:33:44.393Z" user="andreas">2.e</note>
@@ -75,6 +75,7 @@
     <note type="updated" update="translation-status" value="2" date-time="2020-04-24T09:46:43.219Z" user="mike">2</note>
     <note type="updated" update="text-version" value="v 1.0.0" date-time="2020-06-26T04:34:10.397Z" user="mike">First Published Version</note>
     <note type="updated" update="translation-status" value="1" date-time="2020-06-26T04:34:10.397Z" user="mike">First Published Version</note>
+    <note type="updated" update="translation-status" value="1.a" date-time="2020-06-26T04:34:10.397Z" user="admin">Note added retrospectively based on date of status '1'</note>
     <note type="updated" update="publication-date" value="2020-06-26" date-time="2020-06-26T04:34:10.397Z" user="mike">First Published Version</note>
     <note type="updated" update="text-version" value="v 1.0.1" date-time="2020-06-26T07:27:39.645Z" user="mike">Andreas's Corrections Added</note>
     <note type="updated" update="text-version" value="v 1.0.2" date-time="2020-06-26T14:15:03.837Z" user="konchog">Fixed quotation marks in English title on title page.</note>
@@ -97,6 +98,7 @@
     <note type="updated" update="text-version" value="1.1.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2023-04-19T12:52:24.911Z" user="celso">1.1.10</note>
+    <note type="updated" update="text-version" value="1.1.11" date-time="2023-07-27T22:36:00.451Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -382,7 +384,7 @@
                     <lg tid="38">
                         <l>“The one for whom wisdom is the aggregates’ lack of self,</l>
                         <l>Who has gathered the accumulation of merit,</l>
-                        <l>The blissful one, the guide of the world</l>
+                        <l>The well-gone one, the guide of the world</l>
                         <l>Whose form is boundless, has come today!</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-061-004-39"/>
@@ -556,7 +558,7 @@
                     <lg tid="61">
                         <l>“His ankle bones do not protrude, and his heels are well shaped.</l>
                         <l>The sage’s fingers are long and his nails are red.</l>
-                        <l>The soles of the Blissful One’s feet are not arched,</l>
+                        <l>The soles of the Well-Gone One’s feet are not arched,</l>
                         <l>And they are adorned with wheels, hooks, <distinct>svastikas</distinct>, and conches.</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-061-004-65"/>
@@ -1079,7 +1081,7 @@
                     <p tid="145">The Blessed One addressed <ref cRef="F.105.b" type="folio" xml:id="UT22084-061-004-290"/> Mañjuśrī­kumāra­bhūta,
                         saying, “Mañjuśrī, in thirty eons, this child Ratnadatta will become a complete buddha who has
                         manifested unsurpassed and perfect awakening. He will appear in the world as a thus-gone one, a
-                        worthy one, a perfect buddha, learned and virtuous, a blissful one, a knower of the world, an
+                        worthy one, a perfect buddha, learned and virtuous, a well-gone one, a knower of the world, an
                         unsurpassed charioteer who tames beings, a teacher of gods and humans, a blessed buddha called
                             Amogha­bala­kīrti.<note place="end" xml:id="UT22084-061-004-156"> Sanskrit
                             reconstruction of this name from Braarvig (1994), p. 138.</note> Those who gather in his
@@ -1443,11 +1445,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-061-004-267">
+                        <gloss xml:id="UT22084-061-004-267" type="term" mode="match">
                             <term>thus-gone one</term>
-                            <term xml:lang="Bo-Ltn">de bzhin gshegs pa </term>
-                            <term xml:lang="bo">དེ་བཞིན་གཤེགས་པ།</term>
-                            <term xml:lang="Sa-Ltn">tathāgata</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">de bzhin gshegs pa</term>
+                            <term xml:lang="bo" type="sourceAttested">དེ་བཞིན་གཤེགས་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">tathāgata</term>
                             <term type="definition">A frequently used synonym for a buddha. The expression is interpreted in different ways, but in general it implies one who has arrived at the realization of the ultimate state.</term>
                             <term type="definition">Here also used as a specific epithet of the Buddha Śākyamuni.</term>
                         </gloss>
@@ -1455,10 +1457,10 @@
                     <item>
                         <gloss xml:id="UT22084-061-004-268" type="term" mode="match">
                             <term>blessed one</term>
-                            <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                            <term xml:lang="Sa-Ltn">bhagavat</term>
-                            <term xml:lang="Sa-Ltn">bhagavān</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavat</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavān</term>
                             <term type="definition">An epithet for a buddha. Here used as a specific epithet of the Buddha Śākyamuni.</term>
                         </gloss>
                     </item>
@@ -1491,11 +1493,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-004-207">
-                            <term>Ānanda </term>
-                            <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                            <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                            <term xml:lang="Sa-Ltn">Ānanda </term>
+                        <gloss xml:id="UT22084-061-004-207" type="person" mode="match">
+                            <term>Ānanda</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
                             <term type="definition">The name of the Buddha’s close attendant and disciple.</term>
                         </gloss>
                     </item>
@@ -1677,12 +1679,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-004-226">
+                        <gloss xml:id="UT22084-061-004-226" type="person" mode="match">
                             <term>Mañjuśrī</term>
-                            <term xml:lang="Bo-Ltn">’jam dpal </term>
-                            <term xml:lang="bo">འཇམ་དཔལ།</term>
-                            <term xml:lang="Sa-Ltn">Mañjuśrī</term>
-                            <term type="definition">A great bodhisattva, one of the eight “close sons” of the Buddha, the embodiment of wisdom. Also called here Mañjuśrī­kumāra­bhūta, literally “Youthful <term type="ignore">Mañjuśrī</term>.”</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’jam dpal</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇམ་དཔལ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī</term>
+                            <term type="definition">Also called here Mañjuśrī­kumāra­bhūta, literally “Youthful Mañjuśrī.”</term>
                         </gloss>
                     </item>
                     <item>
@@ -1704,13 +1706,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-004-228">
+                        <gloss xml:id="UT22084-061-004-228" type="person" mode="match">
                             <term>Māra</term>
-                            <term xml:lang="Bo-Ltn">bdud </term>
-                            <term xml:lang="bo">བདུད།</term>
-                            <term xml:lang="Sa-Ltn">Māra</term>
-                            <term type="definition">The demon who assailed Śākyamuni prior to his awakening; any demonic
-                                force; the personification of conceptual and emotional obstacles.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bdud</term>
+                            <term xml:lang="bo" type="sourceAttested">བདུད།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">māra</term>
+                            <term type="definition">The demon who assailed Śākyamuni prior to his awakening; any demonic force; the personification of conceptual and emotional obstacles.</term>
                         </gloss>
                     </item>
                     <item>
@@ -1947,13 +1948,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-061-004-255">
+                        <gloss xml:id="UT22084-061-004-255" type="person" mode="match">
                             <term>Yeshé Dé</term>
-                            <term xml:lang="Bo-Ltn">ye shes sde </term>
-                            <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-                            <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">A prolific Tibetan translator active during the late eighth and
-                                early ninth centuries.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
+                            <term type="definition">A prolific Tibetan translator active during the late eighth and early ninth centuries.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2005,13 +2005,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-061-004-261">
+                        <gloss xml:id="UT22084-061-004-261" type="place" mode="match">
                             <term>Meru</term>
-                            <term xml:lang="Bo-Ltn">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                            <term xml:lang="Sa-Ltn">Meru</term>
-                            <term type="definition">The highest mountain at the center of our world according to
-                                traditional Buddhist cosmology.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">meru</term>
+                            <term type="definition">The highest mountain at the center of our world according to traditional Buddhist cosmology.</term>
                         </gloss>
                     </item>
                     <item>
