--- a/translations/kangyur/translations/063-006_toh225-the_sutra_on_the_threefold_going_for_refuge.xml
+++ b/translations/kangyur/translations/063-006_toh225-the_sutra_on_the_threefold_going_for_refuge.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2021</date>
+                <edition>v 1.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:35:57.852Z" user="celso">18/01/2023 15:35:57</note>
+                <note type="lastUpdated" date-time="2023-07-27T22:38:33.499Z" user="admin">27/07/2023 22:38:33</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-09-14T06:37:39.325Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-14T06:37:39.325Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-14T06:38:02.194Z" user="line-tofte">Auto
@@ -85,6 +85,7 @@
                 <note type="updated" update="text-version" value="0.1.3" date-time="2020-09-21T09:36:07.032Z" user="mike">0.1.3</note>
                 <note type="updated" update="text-version" value="0.1.4" date-time="2020-09-21T13:51:19.697Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2020-09-22T09:48:56.871Z" user="mike">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2020-09-22T09:48:56.871Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2020-09-22T09:48:56.871Z" user="mike">First Published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
@@ -94,6 +95,7 @@
     <note type="updated" update="text-version" value="1.0.5" date-time="2022-09-24T23:39:57.419Z" user="andre">Update to the glossary</note>
     <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-27T22:38:30.667Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -185,7 +187,7 @@
                     <milestone unit="chunk" xml:id="UT22084-063-006-9"/>
                     <p tid="15">At that time, while the venerable Śāradvatīputra was alone in the
                         forest, this thought arose in his mind: “I should go before the Teacher so
-                        that I can ask the Blissful One, the Dharma Lord, this question: ‘How much
+                        that I can ask the Well-Gone One, the Dharma Lord, this question: ‘How much
                         merit is accumulated by faithful noble sons or noble daughters who take
                         refuge in the Buddha, the Dharma, and the Saṅgha of monks?’ ”</p>
                     <milestone unit="chunk" xml:id="UT22084-063-006-10"/>
@@ -223,8 +225,8 @@
                     <milestone unit="chunk" xml:id="UT22084-063-006-14"/>
                     <p tid="19">“Śāriputra, tell me, would that person accumulate a lot of merit on
                         that basis?”</p>
-                    <p tid="20">“Blessed One, yes, a lot! Blissful One, yes, a lot! This is beyond all the hearers and solitary buddhas. Blessed One, this is the
-                        domain of the thus-gone ones. Blissful One, this is the domain of the
+                    <p tid="20">“Blessed One, yes, a lot! Well-Gone One, yes, a lot! This is beyond all the hearers and solitary buddhas. Blessed One, this is the
+                        domain of the thus-gone ones. Well-Gone One, this is the domain of the
                         thus-gone ones.”</p>
                     <milestone unit="chunk" xml:id="UT22084-063-006-15"/>
                     <p tid="21">“Śāriputra, that amount of merit would not match even a hundredth,
@@ -348,13 +350,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-063-006-32">
+                        <gloss xml:id="UT22084-063-006-32" type="person" mode="match">
                             <term>Ānanda</term>
-                            <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                            <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                            <term xml:lang="Sa-Ltn">Ānanda</term>
-                            <term type="definition">The personal attendant and cousin of the Buddha,
-                                who compiled the sūtras.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">The personal attendant and cousin of the Buddha, who compiled the sūtras.</term>
                         </gloss>
                     </item>
                     <item>
@@ -468,13 +469,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-063-006-41">
+                        <gloss xml:id="UT22084-063-006-41" type="place" mode="match">
                             <term>Mount Sumeru</term>
-                            <term xml:lang="Bo-Ltn">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                            <term xml:lang="Sa-Ltn">Sumeru</term>
-                            <term type="definition">The great mountain at the center of the universe
-                                according to ancient Indian cosmology.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sumeru</term>
+                            <term type="definition">The great mountain at the center of the universe according to ancient Indian cosmology.</term>
                         </gloss>
                     </item>
                     <item>
