--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -16,10 +16,10 @@
                 <consultant role="projectManager" ref="contributors.xml#person-203">Jed Forman</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-29T13:54:20.88Z" user="admin">29/06/2021 13:54:20</note>
+                <note type="lastUpdated" date-time="2023-07-28T09:32:50.852Z" user="admin">28/07/2023 09:32:50</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-12-09T08:13:26.929Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-09T08:13:26.929Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T10:45:16.921Z" user="line-tofte">Auto (update-contributors)</note>
@@ -43,7 +43,7 @@
             
     <note type="updated" update="translation-status" value="2.h" date-time="2021-06-29T13:46:50.609Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-29T13:46:50.609Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-29T13:54:16.168Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-29T13:54:16.168Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-07-28T09:32:46.594Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-07-28T09:32:46.594Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
